fix alignment of "request to join" button

--- a/css/posts.less
+++ b/css/posts.less
@@ -1127,6 +1127,7 @@ ul.posts {
   .button {
     margin-left: 5px;
     .green-button;
+    vertical-align: baseline;
   }
 }
 
